# aic-risk-modeling

./: .gitignore  pyproject.toml
aic-risk-modeling/preprocess/: earth_engine_explore.ipynb  ee_prep_beam.py  example_config.json  geebeam_main.py  pipeline_requirements.txt  run_df.sh  train_risk_model.ipynb  training_data_pipeline.ipynb  utils.py
aic-risk-modeling/preprocess/geebeam/: utils.py
aic-risk-modeling/train/: data_loader.py  train_risk_model.ipynb
configs/: base_model_config.json  embeddings_bd_3year_config.json
notebooks/: 00-train-locally.ipynb  00-train-model.ipynb  01-train-colab.ipynb
scripts/: 00_train_vertex.py  01_train_vertex_from_config.py
src/aic-risk-modeling/preprocess/: schematest.py  training_data_pipeline.ipynb
src/aic-risk-modeling/train/: __init__.py
src/aic_risk_modeling/: __init__.py
src/aic_risk_modeling/preprocess/: __init__.py
src/aic_risk_modeling/train/: __init__.py  data_loader.py  data_norm.py  models.py  train_model.py  transforms.py
